# CareerLog

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.txt
include/: CommandProcessor.h  ConfigManager.h  DataFileManager.h  Database.h  Date.h  Group.h  Record.h  TestRunner.h  TimePoint.h  Version.h
src/: CommandProcessor.cpp  ConfigManager.cpp  DataFileManager.cpp  Database.cpp  Date.cpp  Group.cpp  Record.cpp  TestRunner.cpp  TimePoint.cpp  main.cpp
